--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* line 17, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 115, /Users/kingsidharth/.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 115, ../../../../../../../.rvm/gems/ruby-1.9.2-p180/gems/compass-0.11.1/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
@@ -71,4 +71,114 @@ footer, header, hgroup, menu, nav, section {
   width: 960px;
   overflow: hidden;
   *zoom: 1;
+}
+
+/* line 14, ../sass/_layout.sass */
+#header_area #header #logo {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 620px;
+}
+/* line 16, ../sass/_layout.sass */
+#header_area #header #zen_space {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 300px;
+}
+
+/* line 21, ../sass/_layout.sass */
+#content_area #content #sidebar {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 300px;
+  position: relative;
+  left: 640px;
+}
+/* line 24, ../sass/_layout.sass */
+#content_area #content #content_box {
+  position: relative;
+  left: -320px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 620px;
+}
+
+/* line 29, ../sass/_layout.sass */
+#footer_area #footer {
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 940px;
+}
+
+/* line 7, ../sass/style.sass */
+body {
+  font-family: "Droid Serif", "Georgia", serif;
+}
+
+/* line 11, ../sass/style.sass */
+#header_area #header {
+  font-size: 22px;
+}
+/* line 13, ../sass/style.sass */
+#header_area #header #logo {
+  text-align: right;
+  padding: 1em 0;
+}
+/* line 16, ../sass/style.sass */
+#header_area #header #logo a {
+  color: #333333;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+/* line 20, ../sass/style.sass */
+#header_area #header #zen_space {
+  padding: 1em 0;
+  background: #d7d7d7;
+}
+
+/* line 26, ../sass/style.sass */
+#content_area #content #sidebar {
+  background: #bbbbbb;
+  color: white;
+}
+/* line 30, ../sass/style.sass */
+#content_area #content #sidebar .menu li a {
+  color: #d1d1d1;
+  padding: 0 0.8em;
+  text-decoration: none;
+  line-height: 3em;
+  font-size: 13px;
+  display: block;
+  background: #acacac;
+}
+/* line 38, ../sass/style.sass */
+#content_area #content #sidebar .menu li a:hover {
+  background: #919191;
+  color: #f5f5f5;
+}
+/* line 42, ../sass/style.sass */
+#content_area #content #content_box .page {
+  margin: 1em 0;
+}
+/* line 44, ../sass/style.sass */
+#content_area #content #content_box .page h2 {
+  font-size: 16px;
+}
+
+/* line 49, ../sass/style.sass */
+#footer_area #footer {
+  text-align: right;
+  padding: 1em 0;
+  font-size: 12px;
+  color: #928888;
 }
