Style Fine Tune for Front Page

--- a/index.haml
+++ b/index.haml
@@ -5,7 +5,7 @@
     <link href="css/grid.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="css/text.css" media="screen, projection" rel="stylesheet" type="text/css">
     <link href="css/style.css" media="screen, projection" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
+    /<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
     
 
   %body#home
@@ -14,7 +14,7 @@
         #header
           %h1#logo
             %a{:href=>""}
-              Site Name
+              Steve Jobs
           /#logo
           #zen_space
             &nbsp;
@@ -36,9 +36,13 @@
               /ul
             /.menu
           #content_box
-            #page_id-77.page
+            #page_id-77.page_post
               %p
-                Lorem ipsum amet sit dolor.
+                Co-Founder Apple Inc.<br>
+                Founder NeXT Computers<br>
+                Buddhist<br>
+                Typography Fanatic<br>
+                Turtle Neck Fashion<br>
         /#content
     /#content_area
 
