--- a/sass/_layout.sass
+++ b/sass/_layout.sass
@@ -20,9 +20,9 @@ $ninesixty-columns: 12
   #content
     #sidebar
       +grid(4)
-      +grid-push(8)
+      //+grid-push(8)
     #content_box
-      +grid-pull(4)
+      //+grid-pull(4)
       +grid(8)
 
 #footer_area
