--- a/css/style.css
+++ b/css/style.css
@@ -97,13 +97,9 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 10px;
   margin-right: 10px;
   width: 300px;
-  position: relative;
-  left: 640px;
 }
 /* line 24, ../sass/_layout.sass */
 #content_area #content #content_box {
-  position: relative;
-  left: -320px;
   display: inline;
   float: left;
   margin-left: 10px;
@@ -123,35 +119,44 @@ footer, header, hgroup, menu, nav, section {
 /* line 7, ../sass/style.sass */
 body {
   font-family: "Droid Serif", "Georgia", serif;
+  font-size: 14px;
+  color: #333333;
 }
 
-/* line 11, ../sass/style.sass */
+/* line 13, ../sass/style.sass */
 #header_area #header {
   font-size: 22px;
 }
-/* line 13, ../sass/style.sass */
+/* line 15, ../sass/style.sass */
 #header_area #header #logo {
   text-align: right;
   padding: 1em 0;
+  font-family: "Monelngo", "Lucida Grande", "Lucida Sans", sans-serif;
 }
-/* line 16, ../sass/style.sass */
+/* line 19, ../sass/style.sass */
 #header_area #header #logo a {
   color: #333333;
   text-decoration: none;
   letter-spacing: 1px;
 }
-/* line 20, ../sass/style.sass */
+/* line 23, ../sass/style.sass */
 #header_area #header #zen_space {
   padding: 1em 0;
   background: #d7d7d7;
 }
 
-/* line 26, ../sass/style.sass */
+/* line 29, ../sass/style.sass */
 #content_area #content #sidebar {
-  background: #bbbbbb;
+  float: right;
+  background: #acacac;
   color: white;
+  min-height: 250px;
 }
-/* line 30, ../sass/style.sass */
+/* line 34, ../sass/style.sass */
+#content_area #content #sidebar .menu {
+  font-family: "Molengo", "Lucida Grande", "Lucida Sans", sans-serif;
+}
+/* line 36, ../sass/style.sass */
 #content_area #content #sidebar .menu li a {
   color: #d1d1d1;
   padding: 0 0.8em;
@@ -159,26 +164,37 @@ body {
   line-height: 3em;
   font-size: 13px;
   display: block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   background: #acacac;
 }
-/* line 38, ../sass/style.sass */
+/* line 46, ../sass/style.sass */
 #content_area #content #sidebar .menu li a:hover {
   background: #919191;
   color: #f5f5f5;
 }
-/* line 42, ../sass/style.sass */
-#content_area #content #content_box .page {
-  margin: 1em 0;
+/* line 49, ../sass/style.sass */
+#content_area #content #content_box {
+  float: left;
 }
-/* line 44, ../sass/style.sass */
-#content_area #content #content_box .page h2 {
+/* line 52, ../sass/style.sass */
+#content_area #content #content_box .page_post h2 {
   font-size: 16px;
 }
+/* line 54, ../sass/style.sass */
+#content_area #content #content_box .page_post p {
+  line-height: 1.6em;
+}
 
-/* line 49, ../sass/style.sass */
+/* line 59, ../sass/style.sass */
 #footer_area #footer {
   text-align: right;
   padding: 1em 0;
   font-size: 12px;
   color: #928888;
+}
+
+/* line 67, ../sass/style.sass */
+#home .page_post {
+  text-align: right;
 }
