--- a/sass/style.sass
+++ b/sass/style.sass
@@ -15,7 +15,7 @@ body
     #logo
       text-align: right
       padding: 1em 0
-      font-family: 'Monelngo', 'Lucida Grande', 'Lucida Sans', sans-serif
+      letter-spacing: -1px
       a
         color: #333
         text-decoration: none
@@ -49,10 +49,21 @@ body
     #content_box
       float: left
       .page_post
+        h1
+          font-size: 1.7em
+          font-family: 'Molengo', 'Lucida Grande', 'Lucida Sans', sans-serif
+          margin-bottom: 0.5em
         h2
           font-size: 16px
         p
           line-height: 1.6em
+        img
+          margin: 1em
+          &.frame
+            background: #D1D1D1
+            border: 1px solid #BBB
+            padding: 0.5em
+            margin: 1em
 
 
 #footer_area
